# cross-platform-hello

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_macos.sh  clean.bat  clean.sh  docker-build.bat  docker-build.sh
.github/workflows/: ci.yml
scripts/: build-all.sh
src/: main.cpp
